Removed Snapshots, made MinecraftServer static and removed ServerProcessImpl